[gd_scene load_steps=22 format=2]

[ext_resource path="res://props/agua/agua.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/drones/Enemy_drone_3.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/nave/Player_nave.gd" type="Script" id=3]
[ext_resource path="res://player/nave/target.tscn" type="PackedScene" id=4]
[ext_resource path="res://maps/map_inicial/Remove_wather.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/drones/Enemy_drone_2.tscn" type="PackedScene" id=6]
[ext_resource path="res://legendas sys/legendas.tscn" type="PackedScene" id=7]
[ext_resource path="res://maps/map_inicial/Controler_map1.gd" type="Script" id=8]
[ext_resource path="res://enemy/drones/Enemy_drone_4.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menu_pausa/Menu_pause.tscn" type="PackedScene" id=10]
[ext_resource path="res://Fonts/jd_code.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://audio/music_bg/bg_1.ogg" type="AudioStream" id=12]
[ext_resource path="res://player/nave/Nave_player.tscn" type="PackedScene" id=13]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.381219, 21.2058, 46.4236 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 42.118, 0.492576, 54.0237 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0.101961, 0.607843, 0.0705882, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=4]
length = 35.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 29.4, 34.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Controler_map1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_legenda1"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Controler_map1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 34.968, 21.7246, 0.207039 )

[node name="Map" type="Spatial"]

[node name="Controler_map1" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Timer_last_kill" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="target" parent="." instance=ExtResource( 4 )]
transform = Transform( -5.57221e-08, 1.53095e-07, 1, 0.939692, 0.34202, 0, -0.34202, 0.939692, -1.62921e-07, 0, 7.64697, 0 )

[node name="Player_nave" parent="." instance=ExtResource( 13 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 7.9005, 0 )
script = ExtResource( 3 )

[node name="Remove_wather" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.85, 7080.65 )

[node name="Sol" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.742877, 0.669429, 0, -0.669429, -0.742877, 0, 1.20419, 0 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="agua" parent="." instance=ExtResource( 1 )]

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7000 )

[node name="limite" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33927, -38.0275 )

[node name="CollisionShape" type="CollisionShape" parent="limite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.0749, 21.565, 42.6795 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="limite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.3096, 21.565, 42.6795 )
shape = SubResource( 1 )

[node name="CollisionShape5" type="CollisionShape" parent="limite"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -7.42414, 21.565, 57.1966 )
shape = SubResource( 1 )

[node name="CollisionShape6" type="CollisionShape" parent="limite"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -7.42414, 21.3866, 18.7748 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="limite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 41.9801 )
shape = SubResource( 2 )

[node name="CollisionShape4" type="CollisionShape" parent="limite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.916233, 39.576, 41.9801 )
shape = SubResource( 2 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.5
margin_right = 20.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade_inicio" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade_inicio"]
autoplay = "fade_out"
anims/fade_out = SubResource( 4 )

[node name="legendas" parent="." instance=ExtResource( 7 )]

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade"]
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 6 )
next/fade_in = "fade_out"

[node name="fade_final" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade_final"]
anims/fade_out = SubResource( 7 )

[node name="Menu_pause" parent="." instance=ExtResource( 10 )]
visible = false

[node name="som_vozes" type="AudioStreamPlayer" parent="."]

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -30.0
autoplay = true

[node name="drone_M" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 1.18022, 11.9084, -319.794 )

[node name="drone_L" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.899157, 8.53641, 13.9281 )

[node name="drone_H" parent="." instance=ExtResource( 9 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 3.51666, 8.5506, 14.2565 )

[node name="Area_STOP" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.0923, 13.5924 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Area_STOP"]
shape = SubResource( 8 )

[editable path="target"]
